; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_mgmt.c_restart_le_scan.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_mgmt.c_restart_le_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_dev = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@HCI_LE_SCAN = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@DISCOV_LE_RESTART_DELAY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hci_dev*)* @restart_le_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @restart_le_scan(%struct.hci_dev* %0) #0 {
  %2 = alloca %struct.hci_dev*, align 8
  store %struct.hci_dev* %0, %struct.hci_dev** %2, align 8
  %3 = load %struct.hci_dev*, %struct.hci_dev** %2, align 8
  %4 = load i32, i32* @HCI_LE_SCAN, align 4
  %5 = call i32 @hci_dev_test_flag(%struct.hci_dev* %3, i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %32

8:                                                ; preds = %1
  %9 = load i64, i64* @jiffies, align 8
  %10 = load i64, i64* @DISCOV_LE_RESTART_DELAY, align 8
  %11 = add nsw i64 %9, %10
  %12 = load %struct.hci_dev*, %struct.hci_dev** %2, align 8
  %13 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.hci_dev*, %struct.hci_dev** %2, align 8
  %17 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %16, i32 0, i32 2
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %15, %19
  %21 = call i64 @time_after(i64 %11, i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %8
  br label %32

24:                                               ; preds = %8
  %25 = load %struct.hci_dev*, %struct.hci_dev** %2, align 8
  %26 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.hci_dev*, %struct.hci_dev** %2, align 8
  %29 = getelementptr inbounds %struct.hci_dev, %struct.hci_dev* %28, i32 0, i32 0
  %30 = load i64, i64* @DISCOV_LE_RESTART_DELAY, align 8
  %31 = call i32 @queue_delayed_work(i32 %27, i32* %29, i64 %30)
  br label %32

32:                                               ; preds = %24, %23, %7
  ret void
}

declare dso_local i32 @hci_dev_test_flag(%struct.hci_dev*, i32) #1

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
